# TradingSoftware

backend/: CMakeLists.txt
backend/config/: AlgoEngine.conf  FIXConfig.conf  FIXOPConfig.conf  IBConfig.conf  IBNanexSymbolMap.csv  NanexPreTradingHours.csv  date_time_zonespec.csv  logger.conf  logging.conf
backend/data/sql/: schema.sql
backend/include/: BackendConfig.H.in  BackendVersion.h
backend/include/config/: Configuration.H
backend/include/connection/: ClientConnection.H  ConnectionManager.H  ConnectionStatus.H  DatabaseConnection.H  ServerConnection.H
backend/include/constant/: AlgoOrderType.H  AlgoStrategyStatus.H  DBOperation.H  ServerConstant.H  ServerGlobals.H
backend/include/db/: Backend.H  EventType.H  IncomingMessageEvent.H  Instrument.H  InternalEvent.H  Order.H  OrderType.H  RejectEvent.H  Strategy.H  StrategyStatus.H
backend/include/fix/: FixMessageHandler.H  FixMessageReader.H  FixOPHandler.H
backend/include/interactive_brokers/: ConnectionHandler.H  ContractsFactory.H  MarketDataHandler.H  OrderHandler.H
backend/include/nanex/: MarketDataHandler.H
backend/include/quote/: QuoteBook.H  Side.H
backend/include/storage/: AlertMessageStore.H  OrderStore.H  PersistOrder.H  RunningStrategyStore.H  StoppedStrategyStore.H  StrategyStore.H
backend/include/strategy/: AlgoMode1State.H  AlgoMode1Strategy.H  StrategyQueue.H
backend/include/symbol/: InstrumentMap.H  ProductType.H  SymbolDictionary.H  SymbolStaticData.H
backend/include/util/: SpinLock.H  SpinLockHelper.H  ThreadSafeVector.H  TimeUtil.H  UniqueIdGenerator.H
backend/opsscripts/: ibsymbol  nanexsymbol
backend/scripts/: config.cmake  deps.cmake
backend/src/: CMakeLists.txt
backend/src/config/: Configuration.C
backend/src/connection/: ClientConnection.C  ConnectionManager.C  ConnectionStatus.C  DatabaseConnection.C  ServerConnection.C
backend/src/constant/: ServerGlobals.C
backend/src/db/: Backend.C  Instrument.C  Strategy.C
backend/src/fix/: FixMessageHandler.C  FixMessageReader.C  FixOPHandler.C
backend/src/nanex/: MarketDataHandler.C
backend/tests/: CMakeLists.txt  TestAlgomodelStrategy1.C  TestAlgomodelStrategy1.H  TestAlgomodelStrategy2.C  TestAlgomodelStrategy2.H  TestInfra.C  TestInfra.H  TestMain.C
shared/: CMakeLists.txt
(+98 files in other folders)
